@@ -26,6 +26,9 @@ This file lists the incompatible changes between Version 2.x and older versions
   - GP: polynomial variables no longer spring into existence unless a true
     t_POL/t_SER in the variable is needed. E.g. y = 0 does not create the
     "variable" y, thereby messing up variable ordering.
+  - genus2red: change syntax. Allow either genus2red(P) or genus2red([P,Q])
+    instead of mandatory Q (was: genus2red(Q,P) with Q almost always 0).
+    Allow uniformization with hyperellcharpoly
 
 * Specific to the PARI library:
 ===============================
