@@ -1,20 +1,24 @@
 Function: genus2red
 Section: elliptic_curves
 C-Name: genus2red
-Prototype: GGDG
-Help: genus2red(Q,P,{p}): let Q,P be polynomials with integer coefficients.
+Prototype: GDG
+Help: genus2red(P,{p}): let P be a polynomial with integer coefficients.
  Determines the reduction at p > 2 of the
- (proper, smooth) hyperelliptic curve C/Q: y^2+Qy = P, of genus 2.
+ (proper, smooth) hyperelliptic curve C/Q: y^2 = P, of genus 2.
  (The special fiber X_p of the minimal regular model X of C over Z.)
-Doc: Let $Q,P$ be polynomials with integer coefficients.
+Doc: Let $P$ be a polynomial with integer coefficients.
  Determines the reduction at $p > 2$ of the (proper, smooth) genus~2
- curve $C/\Q$, defined by the hyperelliptic equation $y^2+Qy = P$. (The
+ curve $C/\Q$, defined by the hyperelliptic equation $y^2 = P$. (The
  special fiber $X_p$ of the minimal regular model $X$ of $C$ over $\Z$.)
+ The special syntax \kbd{genus2red}$([P,Q])$ is also allowed, where the
+ polynomials $P$ and $Q$ have integer coefficients, to represent the model
+ $y^2 + Q(x)y = P(x)$.
+
  If $p$ is omitted, determines the reduction type for all (odd) prime
  divisors of the discriminant.
 
- \noindent This function rewritten from an implementation of Liu's algorithm by
- Cohen and Liu (1994), \kbd{genus2reduction-0.3}, see
+ \noindent This function was rewritten from an implementation of Liu's
+ algorithm by Cohen and Liu (1994), \kbd{genus2reduction-0.3}, see
  \url{http://www.math.u-bordeaux1.fr/~liu/G2R/}.
 
  \misctitle{CAVEAT} The function interface may change: for the
@@ -30,7 +34,7 @@ Doc: Let $Q,P$ be polynomials with integer coefficients.
 
  \bprog
  ? default(debuglevel, 1);
- ? genus2red(0,x^6 + 3*x^3 + 63, 3)
+ ? genus2red(x^6 + 3*x^3 + 63, 3)
  (potential) stable reduction: [1, []]
  reduction at p: [III{9}] page 184, [3, 3], f = 10
  %1 = [59049, Mat([3, 10]), x^6 + 3*x^3 + 63, [3, [1, []],
