@@ -322,6 +322,9 @@ BA 38- much faster polresultant over Z
    51- [] / 0 => div. by 0. Now returns [] (as [] \ 0 already did)
 LGr52- use GRH-guaranteed bounds in bnfinit for residue estimate
    53- Configure: avoid inserting unnecessary -L arguments in link line
+   54- genus2red: change syntax. Allow either genus2red(P) or genus2red([P,Q])
+       instead of mandatory Q (was: genus2red(Q,P) with Q almost always 0).
+       Allow uniformization with hyperellcharpoly
 
 Removed
    1- deprecated functions nfbasis0, nfdisc0, factorpadic0
